Design/bugfixes (#519)
* [components] Spacing in fullscreen dialog

* [components] No extra padding on defaultpane content

* [components] No border in the ends of list items

* [form-builder] Blur events on reference input

* [components] Using non-svg for placeholder

--- a/packages/@sanity/base/src/styles/variables/globals.css
+++ b/packages/@sanity/base/src/styles/variables/globals.css
@@ -3,6 +3,7 @@
   --body-bg: var(--gray-lightest);
   --body-text: #111;
   --component-bg: #fff;
+  --preview-placeholder-color: var(--gray-lighter);
   --component-border-color: color(var(--gray) lightness(+ 30%));
   --component-box-shadow-base: var(--gray-base);
   --component-box-shadow:
